--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,8 +24,8 @@
 @inproceedings{camps2018one,
   title={One-class Gaussian process regressor for quality assessment of transperineal ultrasound images},
   author={Camps, Saskia and Houben, Tim and Fontanarosa, Davide and Edwards, Christopher and Antico, Maria and Dunnhofer, Matteo and Martens, Esther and Baeza, Jose and Vanneste, Ben and van Limbergen, Evert and others},
-  booktitle={1st International Conference on Medical Imaging with Deep Learning (MIDL) 2018},
-  doi={https://openreview.net/forum?id=r1s0gx3iG},
+  booktitle={International Conference on Medical Imaging with Deep Learning (MIDL) 2018},
+  html={https://openreview.net/forum?id=r1s0gx3iG},
   year={2018}
 }
 
@@ -117,8 +117,6 @@
   organization={Springer, Cham}
 }
 
-
-
 @article{dunnhofer2021weakly,
   title={Weakly-Supervised Domain Adaptation of Deep Regression Trackers via Reinforced Knowledge Distillation},
   author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
@@ -135,6 +133,7 @@
   title={Lord of the Rings: Hanoi Pooling and Self-Knowledge Distillation for Fast and Accurate Vehicle Re-Identification},
   author={Martinel, Niki and Dunnhofer, Matteo and Pucci, Rita and Foresti, Gian Luca and Micheloni, Christian},
   journal={IEEE Transactions on Industrial Informatics},
+  html={https://ieeexplore.ieee.org/document/9387157},
   year={2021},
   publisher={IEEE}
 }
@@ -143,48 +142,61 @@
   title={Surrogate Safety Measures Prediction at Multiple Timescales in V2P Conflicts Based on Gated Recurrent Unit},
   author={Miani, Matteo and Dunnhofer, Matteo and Micheloni, Christian and Marini, Andrea and Baldo, Nicola},
   journal={Sustainability},
-  volume={13},
-  number={17},
-  pages={9681},
+  html={https://www.mdpi.com/2071-1050/13/17/9681},
   year={2021},
   publisher={Multidisciplinary Digital Publishing Institute}
-}
-
-@inproceedings{dunnhofer2021first,
-  title={Is First Person Vision Challenging for Object Tracking?},
-  author={Dunnhofer, Matteo and Furnari, Antonino and Farinella, Giovanni Maria and Micheloni, Christian},
-  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
-  pages={2698--2710},
-  year={2021}
-}
-
-
-
-@inproceedings{kristan2021ninth,
-  title={The Ninth Visual Object Tracking VOT2021 Challenge Results},
-  author={Kristan, Matej and Matas, Ji{\v{r}}{\'\i} and Leonardis, Ale{\v{s}} and Felsberg, Michael and Pflugfelder, Roman and K{\"a}m{\"a}r{\"a}inen, Joni-Kristian and Chang, Hyung Jin and Danelljan, Martin and Cehovin, Luka and Luke{\v{z}}i{\v{c}}, Alan and others},
-  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
-  pages={2711--2738},
-  year={2021}
 }
 
 @article{miani2021bituminous,
   title={Bituminous Mixtures Experimental Data Modeling Using a Hyperparameters-Optimized Machine Learning Approach},
   author={Miani, Matteo and Dunnhofer, Matteo and Rondinella, Fabio and Manthos, Evangelos and Valentin, Jan and Micheloni, Christian and Baldo, Nicola},
   journal={Applied Sciences},
-  volume={11},
-  number={24},
-  pages={11710},
+  html={https://www.mdpi.com/1397732},
   year={2021},
   publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@inproceedings{dunnhofer2021improving,
+  title={Improving MRI-based knee disorder diagnosis with pyramidal feature details},
+  author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
+  booktitle={International Conference on Medical Imaging with Deep Learning (MIDL) 2021},
+  html={https://openreview.net/forum?id=7psPmlNffvg},
+  video={https://www.youtube.com/watch?v=XkHiyNDK2Xk},
+  poster={https://drive.google.com/file/d/1dd3WkrKA3DbC_PQuiAQ8vTe4j2MxBhLM/view?usp=sharing},
+  code={https://github.com/matteo-dunnhofer/MRPyrNet},
+  website={https://2021.midl.io/papers/j6},
+  year={2021},
+  organization={PMLR},
+  selected={true},
+}
+
+@inproceedings{dunnhofer2021first,
+  title={Is First Person Vision Challenging for Object Tracking?},
+  author={Dunnhofer, Matteo and Furnari, Antonino and Farinella, Giovanni Maria and Micheloni, Christian},
+  booktitle={IEEE/CVF International Conference on Computer Vision (ICCV) 2021, Visual Object Tracking Challenge VOT2021 workshop},
+  html={},
+  video={https://www.youtube.com/watch?v=oX1nICHgEJM},
+  arxiv={https://arxiv.org/abs/2108.13665},
+  code={https://github.com/matteo-dunnhofer/TREK-150-toolkit},
+  website={https://machinelearning.uniud.it/datasets/trek150/},
+  year={2021}
+}
+
+@inproceedings{kristan2021ninth,
+  title={The Ninth Visual Object Tracking VOT2021 Challenge Results},
+  author={Kristan, Matej and Matas, Ji{\v{r}}{\'\i} and Leonardis, Ale{\v{s}} and Felsberg, Michael and Pflugfelder, Roman and K{\"a}m{\"a}r{\"a}inen, Joni-Kristian and Chang, Hyung Jin and Danelljan, Martin and Cehovin, Luka and Luke{\v{z}}i{\v{c}}, Alan and others},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+  html={https://openaccess.thecvf.com/content/ICCV2021W/VOT/html/Kristan_The_Ninth_Visual_Object_Tracking_VOT2021_Challenge_Results_ICCVW_2021_paper.html},
+  year={2021},
+  video={https://youtu.be/OvgKHj7lH9c},
+  code={http://data.votchallenge.net/vot2021/trackers/mlpLT-code-2021-05-28T15_09_23.381777.zip}
 }
 
 @article{miani2022young,
   title={Young drivers’ pedestrian anti-collision braking operation data modelling for ADAS development},
   author={Miani, Matteo and Dunnhofer, Matteo and Micheloni, Christian and Marini, Andrea and Baldo, Nicola},
-  journal={Transportation Research Procedia},
-  volume={60},
-  pages={432--439},
+  journal={Transportation Research Procedia, Living and Walking in Cities Conference (LWC) 2021},
+  html={https://www.sciencedirect.com/science/article/pii/S2352146521009571},
   year={2022},
   publisher={Elsevier}
 }
@@ -193,107 +205,74 @@
   title={Combining complementary trackers for enhanced long-term visual object tracking},
   author={Dunnhofer, Matteo and Simonato, Kristian and Micheloni, Christian},
   journal={Image and Vision Computing},
-  volume={122},
-  pages={104448},
+  html={https://www.sciencedirect.com/science/article/pii/S0262885622000774},
+  code={https://github.com/matteo-dunnhofer/CoCoLoT},
   year={2022},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  selected={true}
 }
 
-@phdthesis{dunnhofer2022visual,
+@thesis{dunnhofer2022visual,
   title={Visual Object Tracking with Deep Learning},
   author={Dunnhofer, Matteo},
   year={2022},
-  school={University of Udine}
+  school={University of Udine},
+  html={https://air.uniud.it/handle/11390/1224277}
 }
 
 @article{dunnhofer2022deep,
   title={Deep convolutional feature details for better knee disorder diagnoses in magnetic resonance images},
   author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
   journal={Computerized Medical Imaging and Graphics},
-  volume={102},
-  pages={102142},
+  code={https://github.com/matteo-dunnhofer/MRPyrNet},
+  html={https://www.sciencedirect.com/science/article/abs/pii/S0895611122001124},
   year={2022},
   publisher={Pergamon}
+}
+
+@inproceedings{dunnhofer2022cocolot,
+  title={CoCoLoT: Combining Complementary Trackers in Long-Term Visual Tracking},
+  author={Dunnhofer, Matteo and Micheloni, Christian},
+  booktitle={International Conference on Pattern Recognition (ICPR) 2022},
+  html={https://ieeexplore.ieee.org/document/9956082},
+  arxiv={https://arxiv.org/abs/2205.04261},
+  code={https://github.com/matteo-dunnhofer/CoCoLoT},
+  year={2022},
+  organization={IEEE}
+}
+
+@inproceedings{kristan2022tenth,
+  title={The tenth visual object tracking vot2022 challenge results},
+  author={Kristan, Matej and Leonardis, Ale{\v{s}} and Matas, Ji{\v{r}}{\'\i} and Felsberg, Michael and Pflugfelder, Roman and K{\"a}m{\"a}r{\"a}inen, Joni-Kristian and Chang, Hyung Jin and Danelljan, Martin and Zajc, Luka {\v{C}}ehovin and Luke{\v{z}}i{\v{c}}, Alan and others},
+  booktitle={European Conference on Computer Vision (ECCV) 2022, Visual Object Tracking Challenge VOT2022 workshop},
+  html={https://link.springer.com/chapter/10.1007/978-3-031-25085-9_25},
+  year={2022},
+  organization={Springer Nature Switzerland}
 }
 
 @article{dunnhofer2023visual,
   title={Visual Object Tracking in First Person Vision},
   author={Dunnhofer, Matteo and Furnari, Antonino and Farinella, Giovanni Maria and Micheloni, Christian},
   journal={International Journal of Computer Vision},
-  volume={131},
-  number={1},
-  pages={259--283},
+  html={https://link.springer.com/article/10.1007/s11263-022-01694-6},
+  arxiv={https://arxiv.org/abs/2209.13502},
+  code={https://github.com/matteo-dunnhofer/TREK-150-toolkit},
+  website={https://machinelearning.uniud.it/datasets/trek150/},
   year={2023},
-  publisher={Springer}
-}
-
-@inproceedings{dunnhofer2022cocolot,
-  title={CoCoLoT: Combining Complementary Trackers in Long-Term Visual Tracking},
-  author={Dunnhofer, Matteo and Micheloni, Christian},
-  booktitle={2022 26th International Conference on Pattern Recognition (ICPR)},
-  pages={5132--5139},
-  year={2022},
-  organization={IEEE}
-}
-
-@inproceedings{dunnhofer2021improving,
-  title={Improving MRI-based knee disorder diagnosis with pyramidal feature details},
-  author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
-  booktitle={Medical Imaging with Deep Learning},
-  pages={131--147},
-  year={2021},
-  organization={PMLR}
-}
-
-@inproceedings{kristan2022tenth,
-  title={The tenth visual object tracking vot2022 challenge results},
-  author={Kristan, Matej and Leonardis, Ale{\v{s}} and Matas, Ji{\v{r}}{\'\i} and Felsberg, Michael and Pflugfelder, Roman and K{\"a}m{\"a}r{\"a}inen, Joni-Kristian and Chang, Hyung Jin and Danelljan, Martin and Zajc, Luka {\v{C}}ehovin and Luke{\v{z}}i{\v{c}}, Alan and others},
-  booktitle={European Conference on Computer Vision},
-  pages={431--460},
-  year={2022},
-  organization={Springer Nature Switzerland}
+  publisher={Springer},
+  selected={true},
 }
 
 @inproceedings{dunnhofer2023visualizing,
   title={Visualizing Skiers' Trajectories in Monocular Videos},
   author={Dunnhofer, Matteo and Sordi, Luca and Micheloni, Christian},
-  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
-  pages={5187--5197},
-  year={2023}
-}
-
-@inproceedings{khan2023lbkenet,
-  title={LBKENet: Lightweight Blur Kernel Estimation Network for Blind Image Super-Resolution},
-  author={Khan, Asif Hussain and Umer, Rao Muhammad and Dunnhofer, Matteo and Micheloni, Christian and Martinel, Niki},
-  booktitle={International Conference on Image Analysis and Processing},
-  pages={209--222},
+  booktitle={IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) 2023, CVsports workshop},
+  html={https://openaccess.thecvf.com/content/CVPR2023W/CVSports/html/Dunnhofer_Visualizing_Skiers_Trajectories_in_Monocular_Videos_CVPRW_2023_paper.html},
+  video={https://youtu.be/JPQ6EeOaon0},
+  arxiv={https://arxiv.org/abs/2304.02994},
+  website={https://machinelearning.uniud.it/projects/eyof2023/},
   year={2023},
-  organization={Springer}
-}
-
-@inproceedings{kristan2023first,
-  title={The First Visual Object Tracking Segmentation VOTS2023 Challenge Results},
-  author={Kristan, Matej and Matas, Ji{\v{r}}{\'\i} and Danelljan, Martin and Felsberg, Michael and Chang, Hyung Jin and Zajc, Luka {\v{C}}ehovin and Luke{\v{z}}i{\v{c}}, Alan and Drbohlav, Ondrej and Zhang, Zhongqun and Tran, Khanh-Tung and others},
-  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
-  pages={1796--1818},
-  year={2023}
-}
-
-@inproceedings{dunnhofer2024tracking,
-  title={Tracking Skiers from the Top to the Bottom},
-  author={Dunnhofer, Matteo and Sordi, Luca and Martinel, Niki and Micheloni, Christian},
-  booktitle={Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)},
-  year={2024}
-}
-
-@article{dunnhofer2024visual,
-  title={Visual tracking in camera-switching outdoor sport videos: Benchmark and baselines for skiing},
-  author={Dunnhofer, Matteo and Micheloni, Christian},
-  journal={Computer Vision and Image Understanding},
-  volume={243},
-  pages={103978},
-  year={2024},
-  publisher={Academic Press}
+  selected={true}
 }
 
 @inproceedings{dunnhofer2023automatic,
@@ -303,11 +282,54 @@
   year={2023}
 }
 
-@article{nottebaum2024lowformer,
+@inproceedings{khan2023lbkenet,
+  title={LBKENet: Lightweight Blur Kernel Estimation Network for Blind Image Super-Resolution},
+  author={Khan, Asif Hussain and Umer, Rao Muhammad and Dunnhofer, Matteo and Micheloni, Christian and Martinel, Niki},
+  booktitle={International Conference on Image Analysis and Processing},
+  html={},
+  year={2023},
+  organization={Springer}
+}
+
+@inproceedings{kristan2023first,
+  title={The First Visual Object Tracking Segmentation VOTS2023 Challenge Results},
+  author={Kristan, Matej and Matas, Ji{\v{r}}{\'\i} and Danelljan, Martin and Felsberg, Michael and Chang, Hyung Jin and Zajc, Luka {\v{C}}ehovin and Luke{\v{z}}i{\v{c}}, Alan and Drbohlav, Ondrej and Zhang, Zhongqun and Tran, Khanh-Tung and others},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV) 2023, Visual Object Tracking Segmentation Challenge VOTS2023 workshop},
+  html={https://openaccess.thecvf.com/content/ICCV2023W/VOTS/html/Kristan_The_First_Visual_Object_Tracking_Segmentation_VOTS2023_Challenge_Results_ICCVW_2023_paper.html},
+  year={2023}
+}
+
+@inproceedings{dunnhofer2024tracking,
+  title={Tracking Skiers from the Top to the Bottom},
+  author={Dunnhofer, Matteo and Sordi, Luca and Martinel, Niki and Micheloni, Christian},
+  booktitle={IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) 2024},
+  year={2024},
+  html={https://openaccess.thecvf.com/content/WACV2024/html/Dunnhofer_Tracking_Skiers_From_the_Top_to_the_Bottom_WACV_2024_paper.html},
+  video={https://www.youtube.com/watch?v=Aos5iKrYM5o},
+  code={https://github.com/matteo-dunnhofer/SkiTB-toolkit},
+  website={https://machinelearning.uniud.it/datasets/skitb/},
+  arxiv={https://arxiv.org/abs/2312.09723}
+}
+
+@article{dunnhofer2024visual,
+  title={Visual tracking in camera-switching outdoor sport videos: Benchmark and baselines for skiing},
+  author={Dunnhofer, Matteo and Micheloni, Christian},
+  journal={Computer Vision and Image Understanding},
+  html={https://www.sciencedirect.com/science/article/pii/S1077314224000596?via%3Dihub#bib1},
+  code={https://github.com/matteo-dunnhofer/skitb-toolkit},
+  website={https://machinelearning.uniud.it/datasets/skitb/},
+  video={https://www.youtube.com/watch?v=Aos5iKrYM5o},
+  year={2024},
+  selected={true}
+}
+
+
+@inproceedings{nottebaum2024lowformer,
   title={LowFormer: Hardware Efficient Design for Convolutional Transformer Backbones},
   author={Nottebaum, Moritz and Dunnhofer, Matteo and Micheloni, Christian},
-  journal={arXiv preprint arXiv:2409.03460},
-  year={2024}
+  booktitle={IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) 2025},
+  year={2025},
+  arxiv={https://arxiv.org/abs/2409.03460}
 }
 
 
